src/index.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

@layer components {
    .max-container {
        max-width: 1240px;
        margin: 0 auto;
    }
}

@layer utilities {
    .animation-delay-2000 {
        animation-delay: 2s;
    }
    .animation-delay-4000 {
        animation-delay: 4s;
    }
}

